# SmartCommit

./: .gitignore  README.md  requirements.txt
.github/: copilot-instructions.md
Phase3_Submission/: EVALUATOR_QUICK_START.md  FILE_MANIFEST.md  FINAL_SUBMISSION_CHECKLIST.md  GRADING_RUBRIC_CHECKLIST.md  SUBMISSION_README.md
Phase3_Submission/code/: config.yaml
Phase3_Submission/data/: commitbench_samples.csv  prepare_dataset.py
Phase3_Submission/docs/: EVALUATION_METRICS_GUIDE.md  Phase3_Report_IEEE.tex  UI_DESIGN_GUIDE.md
Phase3_Submission/results/: experiment_20251127_001902.csv  experiment_20251127_004822.csv  experiment_20251127_005526.csv  hallucination_analysis.csv  summary_20251127_001902.json
api/: audit_log.py  evaluate_simple.py  main.py
docs/: Phase2_Report_IEEE.tex  TESTING_GUIDE.md  generate_diagrams.py
ethical_ai_commit_message_generator_with_governance_v1_crewai-project (1)/: CREWAI_TEST_RESULTS.md  README.md  pyproject.toml  test_crewai.py
ethical_ai_commit_message_generator_with_governance_v1_crewai-project (1)/src/ethical_ai_commit_message_generator_with_governance/: crew.py  main.py
ethical_ai_commit_message_generator_with_governance_v1_crewai-project (1)/src/ethical_ai_commit_message_generator_with_governance/config/: agents.yaml  tasks.yaml
experiments/: analyze_results.py  compare_results.py  create_hallucination_table.py  experiment_log.txt  run_experiments.py
prompts/: commit_generation.txt  commit_generation_aggressive.txt
results/: summary_20251127_004822.json  summary_20251127_005526.json
ui/: app.py
(+9 files in other folders)
